# Multiagent

./: .env.example  .gitignore  README.md  pyproject.toml
src/: multi-agent_workflow.py
src/finance_agent/: tools.py
