[project]
name = "multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "langchain",
    "langchain-openai",
    "langgraph",
    "mcp",
    "openai",
    "python-dotenv",
]
